updated look of website

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
 	<head>
 		<title>Robot Games - Home</title>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-	
+		<div id="mastercontainer">
+		    <div id="header"><img id="logo" src="assets/logo.png" alt="Robot Games logo"><span id="headertext">Robot Games</span></div>
+		    <div id="content">
+		        <div id="innercontentmiddle">
+		        </div>
+		    </div>
+		    <div id="footerclear"></div>
+		</div>
 	</body>
 </html>
+
