worked on website some more
added footer and sidebar for scrolling no scripts get

test.html dbrand website

--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
 	<body>
 		<div id="mastercontainer">
 		    <div id="header"><img id="logo" src="assets/logo.png" alt="Robot Games logo"><span id="headertext">Robot Games</span></div>
+		    <div id="navbar">
+		    </div>
 		    <div id="content">
+		    	<div id="scroll-sidebar">
+		    	left
+		        </div>
 		        <div id="innercontentmiddle">
+		        right
 		        </div>
 		    </div>
 		    <div id="footerclear"></div>
+		<div id="footer">
+		test
+		</div>
 		</div>
 	</body>
 </html>
