added all menu items

--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
 									<li><a href="#">Stencyl</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Training Accessories</a></li>
-							<li><a href="#">Smart-Cart Training System</a></li>
-							<li><a href="#">Smart-Hurdle Collection</a></li>
+							<li><a href="#">The Game</a>
+								<ul>
+									<li><a href="#">Computer Games</a></li>
+									<li><a href="#">Gaming &amp; Society</a></li>
+									<li><a href="#">Game Design</a></li>
+									<li><a href="#">The Game</a></li>
+									<li><a href="#">Game Testing</a></li>
+									<li><a href="#">Game Documentation</a></li>
+								</ul>
+							</li>
 						</ul>
 					</li>
 					<li class="nav-button"><a href="#">Contact Us</a>
