added actual content

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 				
 				</div>
 				<div id="innercontentmiddle">
-					<h1 class="text-centered">Introduction To Robot Games</h1>
+					<h1 class="text-centered">About Robot Games</h1>
 
 				</div>
 			</div>
@@ -87,7 +87,8 @@
 		<br /><br />
 		<a href="contact-us.html">Contact Us</a><br />
 		<a href="about.html">About Us</a><br />
-		
+
+
 		</div>
 		</div>
 	</body>
