--- a/javascript.html
+++ b/javascript.html
@@ -61,7 +61,8 @@
 				
 				</div>
 				<div id="innercontentmiddle">
-					<h1 class="text-centered">Introduction To Robot Games</h1>
+					<h1 class="text-centered">Javascript</h1>
+					<a href="javascript-game.html">Javscript Game</a>
 
 				</div>
 			</div>
