--- a/web-architecture.html
+++ b/web-architecture.html
@@ -32,6 +32,7 @@
 									<li><a href="HTML.html">HTML</a></li>
 									<li><a href="CSS.html">CSS</a></li>
 									<li><a href="stencyl.html">Stencyl</a></li>
+									<li><a href="javascript.html">Javascript</a></li>
 								</ul>
 							</li>
 							<li><a href="the-game.html">The Game</a>
