--- a/computer-games.html
+++ b/computer-games.html
@@ -61,7 +61,7 @@
 				left
 				</div>
 				<div id="innercontentmiddle">
-					<h1 class="text-centered">Computer Games</h1>
+					<h1 class="text-centered">Computer Games - Unit 22 P2</h1>
 					
 					<h3>Game Genres</h3>
 
@@ -111,7 +111,9 @@
 					<h4>desktop</h4>
 					Desktops have alot of hardware in them and while the power of the hardware varies between systems the upper level of this is so much higher than consoles it allows games of a different class to be run at extreamely high resolution up to 4k with current monitors at a high fps usually 60 although some monitors now allow 140fps which is extreame for gaming but allows extreame precision within games such as in csgo where it matters. desktops are able to play online games aswell such as mmos like runscape as a desktop or laptop are the only things that are capable of this.
 					<img src="https://lh6.googleusercontent.com/O7WQ-SC9scO-T60cB-sKRT05ccLiWdr2zo4ZmKdoEso3nOaKS5KnO6be70tTenCEulzUzTR6Mw0Ai8VwAOG7mIQ8zvcYjrPHkr5lnz4REBmFCKnsyxaVbrgAD1p8TBWDnA" style="height: 200px; width: 230px; display: inherit;" alt="CSGO" />
-
+					<h4>Online</h4>
+					The online platform i mostly used for MMOs because it allows people to play together in servers very easily it is very widely used for mmos because it doesnt require the user to download anything because everything is run from the browser and the user doesnt need to download anything. Many MMOs are based online because they are easier for them to maintain because the user doesnt have to update because the game isnt downloaded. the online platform is suitable for these games because they only requre a few simple controls and not complicated control schemes.
+					
 					<h3>Technology</h3>
 					<h4>AI</h4>
 					Ai is a technology that allows the charicters other than the player in game to act in a certian way. For example in most games the passive charicter ai is pretty plain as they just wander aimlessly around the map and allow the player to interact with them. however in most games the at for charicters that are involved in combat is vastly more complex, for example when the charicter sees the player in the game the ai of the charicter may make then hide and try and get away from the player in a situation where the ai knows that it cannot kill the player while when the ai knows that it is possible to kill the player ie it has high health and a good weapon and the player is weak then the ai could force the charicter to attack the player or use specific tactics such as ducking when the player aims there barrel at the charicter as this would improve the ai's odds. in the game doom 2016 the enemy ai is quite advanced when compared to other ai's in current games therefore this makes the players game harder when they are trying to kill the enemies because the ai is capable of detecting whn the player is aiming at them and jumping out of the way to dodge an incomming shot. 
@@ -127,12 +129,13 @@
 					<img src="https://digitalmediaservices.files.wordpress.com/2010/06/7point1_surround.jpg" style="height: 200px; width: 230px; display: inherit;" alt="Surround Sound Setup 7.1" />
 
 					<h4>Gameplay</h4>
+					improvements in programming and game design has allowed games to become less on rails and therefore the players experience can be different for every single player for example, in open world games each player can go about the game in a compleately different way. In games such as GTAV it is truly open world and the player can do whatever they want and the game will allow them to do this. the improvements to the roots in the storyline in games is what really increases the gameplay aspect of new games as even games that are relitively on rails and the story is linear have so many roots in their story that each player can take a slightly different path in the game and get a compleately different eperience.
+					<img src="http://www.igta5.com/images/gta-v-map-satellite-small.jpg" style="height: 200px; width: 230px; display: inherit;" alt="GTAV map" />
 
 
 					<h4>Scripting</h4>
-
-
-
+					due to newer computer systems having much much larger capacity drives they are able to store much more storyline for games as well as graphics and other game files however because there is now not really and storage limit within a reasonable ammount using multiple gigabytes just for the storyline and scripting isnt really a problem therefore the game designers get much more freedom in what they want to do in the game. due to the storyline being much more deep and developed than in the past the gaming experience is much more immersive and variated because the developers can make the charicters have a deep backstory which can influence your conversations that you may have with the charicters in the game. having a deep storyline and developed charicters will allow the player to get more immersed in the game because they will be able to feel like the game world is personalised to them and their past interactions with the charicters in game.
+					<img src="http://media.psu.com/media/articles/image/fallout16.png" style="height: 200px; width: 230px; display: inherit;" alt="Fallout 4 conversation" />
 
 				</div>
 			</div>
