updated the site

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 				</div>
 				<div id="innercontentmiddle">
 					<h1 class="text-centered">Introduction To Robot Games</h1>
+					Welcome to robot games. we are a games company who specialise in flash games and web development.
+					Below is a picture example of one of the games we have developed recently.
+					<img src="Assets/logo.png" alt="Picture of recent game">
 
 				</div>
 			</div>
