--- a/web-requirements-security.html
+++ b/web-requirements-security.html
@@ -206,6 +206,13 @@ screenshots of Space Odyssey.</p>
  <v:imagedata src="Feedback_files/image003.png" o:title="homepage post changes"/>
 </v:shape><![endif]--><![if !vml]><img width=403 height=194
 src="Feedback_files/image004.png" v:shapes="Picture_x0020_2"><![endif]></span></p>
+
+				<br />
+				<h1>D3</h1>
+				<img src="assets/design.png"><br />
+				After looking back on my origional design for the website it has not changed much and it looks mostly the same as the origional plan however the side bar that was origionally on the left that was going to be used for putting set scroll points in was moved to the right and is currently unused. The purpose of this website was to show off the game that i had made as well as to show off all the assignments i have done over the course of the project and i think the website oes this task ppretty well. all the work i have done this year is in thos website and can all be access through either the top interactive menu or by using the accessibility menu that the bottom which should work on basically any browser because it only relys on basic html and css while th emenu at the top of the page requires javascript and jquery to run and thereofre may have issues on some devices.
+
+
 				</div>
 			</div>
 		<div id="footerclear"></div>
