added the d3 stuff

--- a/web-requirements-security.html
+++ b/web-requirements-security.html
@@ -213,6 +213,330 @@ src="Feedback_files/image004.png" v:shapes="Picture_x0020_2"><![endif]></span></
 				After looking back on my origional design for the website it has not changed much and it looks mostly the same as the origional plan however the side bar that was origionally on the left that was going to be used for putting set scroll points in was moved to the right and is currently unused. The purpose of this website was to show off the game that i had made as well as to show off all the assignments i have done over the course of the project and i think the website oes this task ppretty well. all the work i have done this year is in thos website and can all be access through either the top interactive menu or by using the accessibility menu that the bottom which should work on basically any browser because it only relys on basic html and css while th emenu at the top of the page requires javascript and jquery to run and thereofre may have issues on some devices.
 
 
+				<div class=WordSection1>
+
+<div style='mso-element:para-border-div;border:none;border-bottom:solid #4F81BD 1.0pt;
+mso-border-bottom-themecolor:accent1;padding:0cm 0cm 4.0pt 0cm'>
+
+<p class=MsoTitle><span lang=EN-GB>Assignment 1</span></p>
+
+</div>
+
+<h1><span lang=EN-GB>Task 1</span></h1>
+
+<p class=MsoNormal><span lang=EN-GB>For task one my brief was to design the
+webpage structure and the webpage layout.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shapetype
+ id="_x0000_t75" coordsize="21600,21600" o:spt="75" o:preferrelative="t"
+ path="m@4@5l@4@11@9@11@9@5xe" filled="f" stroked="f">
+ <v:stroke joinstyle="miter"/>
+ <v:formulas>
+  <v:f eqn="if lineDrawn pixelLineWidth 0"/>
+  <v:f eqn="sum @0 1 0"/>
+  <v:f eqn="sum 0 0 @1"/>
+  <v:f eqn="prod @2 1 2"/>
+  <v:f eqn="prod @3 21600 pixelWidth"/>
+  <v:f eqn="prod @3 21600 pixelHeight"/>
+  <v:f eqn="sum @0 0 1"/>
+  <v:f eqn="prod @6 1 2"/>
+  <v:f eqn="prod @7 21600 pixelWidth"/>
+  <v:f eqn="sum @8 21600 0"/>
+  <v:f eqn="prod @7 21600 pixelHeight"/>
+  <v:f eqn="sum @10 21600 0"/>
+ </v:formulas>
+ <v:path o:extrusionok="f" gradientshapeok="t" o:connecttype="rect"/>
+ <o:lock v:ext="edit" aspectratio="t"/>
+</v:shapetype><v:shape id="Picture_x0020_1" o:spid="_x0000_i1050" type="#_x0000_t75"
+ style='width:452pt;height:67pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image001.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=452 height=67
+src="ass4%20stuff.fld/image002.png" v:shapes="Picture_x0020_1"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>This is the work that I did for this:</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_2" o:spid="_x0000_i1049" type="#_x0000_t75" style='width:267pt;
+ height:269pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image003.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=267 height=269
+src="ass4%20stuff.fld/image004.png" v:shapes="Picture_x0020_2"><![endif]></span></p>
+
+<h1><span lang=EN-GB>Task 2</span></h1>
+
+<p class=MsoNormal><span lang=EN-GB>This was my assignment <span class=SpellE>beief</span>:</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_3" o:spid="_x0000_i1048" type="#_x0000_t75" style='width:451pt;
+ height:232pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image005.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=232
+src="ass4%20stuff.fld/image006.png" v:shapes="Picture_x0020_3"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this assignment I had to explain how
+the web infrastructure works and how webpages are displayed. Here is my report
+on this topic.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_4" o:spid="_x0000_i1047" type="#_x0000_t75" style='width:451pt;
+ height:116pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image007.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=116
+src="ass4%20stuff.fld/image008.png" v:shapes="Picture_x0020_4"><![endif]></span></p>
+
+<h1><span lang=EN-GB>Task 3</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_5" o:spid="_x0000_i1046" type="#_x0000_t75" style='width:451pt;
+ height:161pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image009.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=161
+src="ass4%20stuff.fld/image010.png" v:shapes="Picture_x0020_5"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this task I had to write a report on
+how we can <span class=SpellE>ikeep</span> websites secure and how we can make
+them perform at their best. Here is my report:</span></p>
+
+<p class=MsoNormal><span lang=EN-GB style='mso-fareast-language:EN-GB;
+mso-no-proof:yes'><o:p>&nbsp;</o:p></span></p>
+
+<p class=MsoNormal><span lang=EN-GB style='mso-fareast-language:EN-GB;
+mso-no-proof:yes'><o:p>&nbsp;</o:p></span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_6" o:spid="_x0000_i1045" type="#_x0000_t75" style='width:451pt;
+ height:100pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image011.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=100
+src="ass4%20stuff.fld/image012.png" v:shapes="Picture_x0020_6"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB><o:p>&nbsp;</o:p></span></p>
+
+<div style='mso-element:para-border-div;border:none;border-bottom:solid #4F81BD 1.0pt;
+mso-border-bottom-themecolor:accent1;padding:0cm 0cm 4.0pt 0cm'>
+
+<p class=MsoTitle align=center style='text-align:center'><span lang=EN-GB>Assignment
+2</span></p>
+
+</div>
+
+<h1><span lang=EN-GB>Task 1</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_7" o:spid="_x0000_i1044" type="#_x0000_t75" style='width:451pt;
+ height:183pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image013.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=183
+src="ass4%20stuff.fld/image014.png" v:shapes="Picture_x0020_7"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this task I had to talk about how css
+works and how it can be used. Here is the assignment.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_8" o:spid="_x0000_i1043" type="#_x0000_t75" style='width:451pt;
+ height:78pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image015.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=78
+src="ass4%20stuff.fld/image016.png" v:shapes="Picture_x0020_8"><![endif]></span></p>
+
+<h1><span lang=EN-GB>Task 2</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_9" o:spid="_x0000_i1042" type="#_x0000_t75" style='width:344pt;
+ height:204pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image017.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=344 height=204
+src="ass4%20stuff.fld/image018.png" v:shapes="Picture_x0020_9"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this assignment I had to make some
+JavaScript scripts and create a report on them.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_10" o:spid="_x0000_i1041" type="#_x0000_t75" style='width:285pt;
+ height:119pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image019.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=285 height=119
+src="ass4%20stuff.fld/image020.png" v:shapes="Picture_x0020_10"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>This is the JavaScript game that I created
+to test.</span></p>
+
+<p class=MsoNormal><span lang=EN-GB><o:p>&nbsp;</o:p></span></p>
+
+<div style='mso-element:para-border-div;border:none;border-bottom:solid #4F81BD 1.0pt;
+mso-border-bottom-themecolor:accent1;padding:0cm 0cm 4.0pt 0cm'>
+
+<p class=MsoTitle align=center style='text-align:center'><span lang=EN-GB>Assignment
+3</span></p>
+
+</div>
+
+<h1><span lang=EN-GB>Task 1</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_11" o:spid="_x0000_i1040" type="#_x0000_t75" style='width:451pt;
+ height:128pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image021.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=128
+src="ass4%20stuff.fld/image022.png" v:shapes="Picture_x0020_11"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this assignment I had to <span
+class=SpellE>tlak</span> about the different type of game genres and how they
+differ. Here is the report I wrote:</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_12" o:spid="_x0000_i1039" type="#_x0000_t75" style='width:451pt;
+ height:119pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image023.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=119
+src="ass4%20stuff.fld/image024.png" v:shapes="Picture_x0020_12"><![endif]></span></p>
+
+<h1><span lang=EN-GB>Task 2</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_13" o:spid="_x0000_i1038" type="#_x0000_t75" style='width:451pt;
+ height:178pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image025.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=178
+src="ass4%20stuff.fld/image026.png" v:shapes="Picture_x0020_13"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this assignment I had to write a report
+on what effect games have on society and people who are addicted to games.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_14" o:spid="_x0000_i1037" type="#_x0000_t75" style='width:451pt;
+ height:159pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image027.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=159
+src="ass4%20stuff.fld/image028.png" v:shapes="Picture_x0020_14"><![endif]></span></p>
+
+<h1><span lang=EN-GB>Task 3</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_15" o:spid="_x0000_i1036" type="#_x0000_t75" style='width:451pt;
+ height:318pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image029.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=318
+src="ass4%20stuff.fld/image030.png" v:shapes="Picture_x0020_15"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this task I had to design the game
+using different methods. Here is the design process.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_16" o:spid="_x0000_i1035" type="#_x0000_t75" style='width:372pt;
+ height:146pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image031.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=372 height=146
+src="ass4%20stuff.fld/image032.png" v:shapes="Picture_x0020_16"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>Task 4</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_17" o:spid="_x0000_i1034" type="#_x0000_t75" style='width:451pt;
+ height:182pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image033.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=182
+src="ass4%20stuff.fld/image034.png" v:shapes="Picture_x0020_17"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this task I had to create a game.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_18" o:spid="_x0000_i1033" type="#_x0000_t75" style='width:451pt;
+ height:255pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image035.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=255
+src="ass4%20stuff.fld/image036.png" v:shapes="Picture_x0020_18"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>This is the start menu for my game.</span></p>
+
+<h1><span lang=EN-GB>Task 5</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_19" o:spid="_x0000_i1032" type="#_x0000_t75" style='width:451pt;
+ height:191pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image037.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=191
+src="ass4%20stuff.fld/image038.png" v:shapes="Picture_x0020_19"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this task I had to fully test my game
+to make sure it worked properly however because it is a prototype it doesnÕt
+work perfectly.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_20" o:spid="_x0000_i1031" type="#_x0000_t75" style='width:335pt;
+ height:142pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image039.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=335 height=142
+src="ass4%20stuff.fld/image040.png" v:shapes="Picture_x0020_20"><![endif]></span></p>
+
+<h1><span lang=EN-GB>Task 6</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_21" o:spid="_x0000_i1030" type="#_x0000_t75" style='width:451pt;
+ height:111pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image041.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=111
+src="ass4%20stuff.fld/image042.png" v:shapes="Picture_x0020_21"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this assignment I had to create user
+documentation for the game. Here is some of the user guide I created.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_22" o:spid="_x0000_i1029" type="#_x0000_t75" style='width:178pt;
+ height:259pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image043.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=178 height=259
+src="ass4%20stuff.fld/image044.png" v:shapes="Picture_x0020_22"><![endif]></span></p>
+
+<div style='mso-element:para-border-div;border:none;border-bottom:solid #4F81BD 1.0pt;
+mso-border-bottom-themecolor:accent1;padding:0cm 0cm 4.0pt 0cm'>
+
+<p class=MsoTitle align=center style='text-align:center'><span lang=EN-GB>Assignment
+4</span></p>
+
+</div>
+
+<h1><span lang=EN-GB>Task 1</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_23" o:spid="_x0000_i1028" type="#_x0000_t75" style='width:451pt;
+ height:128pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image045.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=128
+src="ass4%20stuff.fld/image046.png" v:shapes="Picture_x0020_23"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this one we had to talk about tools and
+<span class=SpellE>techinques</span> used to create the website so here is my
+report:</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_24" o:spid="_x0000_i1027" type="#_x0000_t75" style='width:452pt;
+ height:146pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image047.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=452 height=146
+src="ass4%20stuff.fld/image048.png" v:shapes="Picture_x0020_24"><![endif]></span></p>
+
+<h1><span lang=EN-GB>Task 2</span></h1>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_25" o:spid="_x0000_i1026" type="#_x0000_t75" style='width:451pt;
+ height:114pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image049.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=451 height=114
+src="ass4%20stuff.fld/image050.png" v:shapes="Picture_x0020_25"><![endif]></span></p>
+
+<p class=MsoNormal><span lang=EN-GB>For this I had to test the css and the
+JavaScript for the website but I also did the html.</span></p>
+
+<p class=MsoNormal><span style='mso-ansi-language:EN-US;mso-no-proof:yes'><!--[if gte vml 1]><v:shape
+ id="Picture_x0020_26" o:spid="_x0000_i1025" type="#_x0000_t75" style='width:400pt;
+ height:194pt;visibility:visible;mso-wrap-style:square'>
+ <v:imagedata src="ass4%20stuff.fld/image051.png" o:title=""/>
+</v:shape><![endif]--><![if !vml]><img width=400 height=194
+src="ass4%20stuff.fld/image052.png" v:shapes="Picture_x0020_26"><![endif]></span></p>
+
+</div>
+
 				</div>
 			</div>
 		<div id="footerclear"></div>
