added the m3 d2 headers etc

--- a/HTML.html
+++ b/HTML.html
@@ -63,7 +63,7 @@
 				<div id="innercontentmiddle">
 					<div class=WordSection1>
 
-<h1 align=center style='text-align:center'>Html Validation</h1>
+<h1 align=center style='text-align:center'>Html Validation Unit 20 P6</h1>
 
 <p class=MsoNormal>In order to make sure that my website will be the most
 compatible it can be with as many browsers as possible I tested the code for
