--- a/web-requirements-security.html
+++ b/web-requirements-security.html
@@ -150,7 +150,7 @@
 					sequential numbers in the password also helps make it more difficult to guess.
 					
 					
-					<h1 align=center style='text-align:center'>Feedback</h1>
+					<h1 align=center style='text-align:center'>Feedback - Unit 28 M3 and Unit 20 M3</h1>
 
 <p class=MsoNormal>After meeting with the tutor I showed him the main home page
 for the website and one of the pieces of feedback that I got was that the
@@ -208,7 +208,7 @@ screenshots of Space Odyssey.</p>
 src="Feedback_files/image004.png" v:shapes="Picture_x0020_2"><![endif]></span></p>
 
 				<br />
-				<h1>D3</h1>
+				<h1>Proof i met the requirements - Unit 28 D3</h1>
 				<img src="assets/design.png"><br />
 				After looking back on my origional design for the website it has not changed much and it looks mostly the same as the origional plan however the side bar that was origionally on the left that was going to be used for putting set scroll points in was moved to the right and is currently unused. The purpose of this website was to show off the game that i had made as well as to show off all the assignments i have done over the course of the project and i think the website oes this task ppretty well. all the work i have done this year is in thos website and can all be access through either the top interactive menu or by using the accessibility menu that the bottom which should work on basically any browser because it only relys on basic html and css while th emenu at the top of the page requires javascript and jquery to run and thereofre may have issues on some devices.
 
