did resub stuff
shut up about my work

--- a/HTML.html
+++ b/HTML.html
@@ -855,7 +855,7 @@ should be as compatible with other browsers as possible.</p>
  id="Picture_x0020_3" o:spid="_x0000_i1025" type="#_x0000_t75" style='width:511.5pt;
  height:72.75pt;visibility:visible;mso-wrap-style:square'>
  <v:imagedata src="P6%20Testing_files/image005.emz" o:title=""/>
-</v:shape><![endif]--><![if !vml]><img width=682 height=97
+</v:shape><![endif]--><![if !vml]><img height=200
 src="P6%20Testing_files/image006.png" v:shapes="Picture_x0020_3"><![endif]></span></p>
 
 <p class=MsoNormal>I have done some testing on the JavaScript on my website and
