--- a/web-requirements-security.html
+++ b/web-requirements-security.html
@@ -428,6 +428,7 @@ using different methods. Here is the design process.</span></p>
  <v:imagedata src="ass4%20stuff.fld/image031.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img width=372 height=146
 src="ass4%20stuff.fld/image032.png" v:shapes="Picture_x0020_16"><![endif]></span></p>
+<img width=372 height=146 src="assets/story.PNG" v:shapes="Picture_x0020_16">
 
 <p class=MsoNormal><span lang=EN-GB>Task 4</span></p>
 
@@ -445,9 +446,9 @@ src="ass4%20stuff.fld/image034.png" v:shapes="Picture_x0020_17"><![endif]></span
  height:255pt;visibility:visible;mso-wrap-style:square'>
  <v:imagedata src="ass4%20stuff.fld/image035.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img width=451 height=255
-src="ass4%20stuff.fld/image036.png" v:shapes="Picture_x0020_18"><![endif]></span></p>
+src="assets/Main Level Gameplay.PNG" v:shapes="Picture_x0020_18"><![endif]></span></p>
 
-<p class=MsoNormal><span lang=EN-GB>This is the start menu for my game.</span></p>
+<p class=MsoNormal><span lang=EN-GB>This is the main level for my game.</span></p>
 
 <h1><span lang=EN-GB>Task 5</span></h1>
 
